Remove overflow so arrows can be displayed correctly

--- a/react/global.css
+++ b/react/global.css
@@ -46,6 +46,10 @@
     display: block;
 }
 
+.slick-slider {
+  overflow: visible;
+}
+
 @media only screen and (max-width: 600px) {
     .vtex-shelf .slick-slide {
         display: flex;
